components/foundryvtt/base/foundryvtt-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: foundryvtt
  name: foundryvtt
  labels:
    app: foundryvtt
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foundryvtt
  template:
    metadata:
      labels:
        app: foundryvtt
    spec:
      securityContext:
        runAsUser: 1000
      containers:
        - name: foundryvtt-web
          #image: mbround18/foundryvtt-docker:latest
          image: felddy/foundryvtt:latest
          ports:
            - name: web
              containerPort: 30000
          volumeMounts:
            - name: foundryvtt-data-persistent-storage
              mountPath: /data
      volumes:
        - name: foundryvtt-data-persistent-storage
          persistentVolumeClaim:
            claimName: foundryvtt-data-pv-claim
